# AITuberTalk-SDK

./: README.md  SDK-SPECIFICATION.md
python/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
python/aitubertalk/: __init__.py  client.py
python/aitubertalk/auth/: __init__.py  auth_module.py  types.py
python/aitubertalk/core/: __init__.py  client_config.py  events.py  exceptions.py  retry_config.py
python/aitubertalk/dialogue/: __init__.py  dialogue_module.py  types.py
python/aitubertalk/media/: __init__.py  media_module.py  types.py
python/aitubertalk/rooms/: __init__.py  room_module.py  types.py
python/examples/: basic_usage.py
python/tests/: __init__.py  test_auth.py  test_client.py
